@@ -11,6 +11,7 @@ function __autoload($className) {
 		'AjaxDispatcher' => 'includes/AjaxDispatcher.php',
 		'AjaxCachePolicy' => 'includes/AjaxFunctions.php',
 		'AjaxResponse' => 'includes/AjaxResponse.php',
+		'AlphabeticPager' => 'includes/Pager.php',
 		'Article' => 'includes/Article.php',
 		'AuthPlugin' => 'includes/AuthPlugin.php',
 		'BagOStuff' => 'includes/BagOStuff.php',
@@ -158,7 +159,6 @@ function __autoload($className) {
 		'IPBlockForm' => 'includes/SpecialBlockip.php',
 		'SpecialBookSources' => 'includes/SpecialBooksources.php',
 		'BrokenRedirectsPage' => 'includes/SpecialBrokenRedirects.php',
-		'CategoriesPage' => 'includes/SpecialCategories.php',
 		'EmailConfirmation' => 'includes/SpecialConfirmemail.php',
 		'ContributionsPage' => 'includes/SpecialContributions.php',
 		'DeadendPagesPage' => 'includes/SpecialDeadendpages.php',
