@@ -4,64 +4,44 @@
  * @addtogroup SpecialPage
  */
 
-/**
- *
- * @addtogroup SpecialPage
- */
-class CategoriesPage extends QueryPage {
+function wfSpecialCategories() {
+	global $wgOut;
 
-	function getName() {
-		return "Categories";
-	}
-
-	function isExpensive() {
-		return false;
-	}
-
-	function isSyndicated() { return false; }
-
-	function getPageHeader() {
-		return wfMsgWikiHtml( 'categoriespagetext' );
-	}
-	
-	function getSQL() {
-		$NScat = NS_CATEGORY;
-		$dbr = wfGetDB( DB_SLAVE );
-		$categorylinks = $dbr->tableName( 'categorylinks' );
-		$implicit_groupby = $dbr->implicitGroupby() ? '1' : 'cl_to';
-		$s= "SELECT 'Categories' as type,
-				{$NScat} as namespace,
-				cl_to as title,
-				$implicit_groupby as value,
-				COUNT(*) as count
-			   FROM $categorylinks
-			   GROUP BY 1,2,3,4";
-		return $s;
-	}
-
-	function sortDescending() {
-		return false;
-	}
-
-	function formatResult( $skin, $result ) {
-		global $wgLang;
-		$title = Title::makeTitle( NS_CATEGORY, $result->title );
-		$plink = $skin->makeLinkObj( $title, $title->getText() );
-		$nlinks = wfMsgExt( 'nmembers', array( 'parsemag', 'escape'),
-			$wgLang->formatNum( $result->count ) );
-		return wfSpecialList($plink, $nlinks);
-	}
+	$cap = new CategoryPager();
+	$wgOut->addHTML( 
+		wfMsgWikiHtml( 'categoriespagetext' ) .
+		$cap->getNavigationBar()
+		. '<ul>' . $cap->getBody() . '</ul>' .
+		$cap->getNavigationBar()
+		);
 }
 
-/**
- *
- */
-function wfSpecialCategories() {
-	list( $limit, $offset ) = wfCheckLimits();
-
-	$cap = new CategoriesPage();
-
-	return $cap->doQuery( $offset, $limit );
+class CategoryPager extends AlphabeticPager {
+	function getQueryInfo() {
+		return array(
+			'tables' => array('categorylinks'),
+			'fields' => array('cl_to','count(*) count'),
+			'options' => array('GROUP BY' => 'cl_to')
+			);
+	}
+	
+	function getIndexField() {
+		return "cl_to";
+	}
+	
+	function formatRow($result) {
+		global $wgLang;
+		
+		$title = Title::makeTitle( NS_CATEGORY, $result->cl_to );
+		return ( 
+			'<li>' .
+			$this->getSkin()->makeLinkObj( $title, $title->getText() )
+			. ' ' .
+			$nlinks = wfMsgExt( 'nmembers', array( 'parsemag', 'escape'),
+			$wgLang->formatNum( $result->count ) )
+			.
+			"</li>\n" );
+	}
 }
 
 ?>
